// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editServerEpic actions snapshot on failed response 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "editServer/INITIALIZED",
    "values": Object {
      "name": "name",
      "port": 3000,
    },
  },
  Object {
    "notification": Object {
      "text": "error message",
      "type": "error",
    },
    "type": "notifications/ADD",
  },
]
`;

exports[`editServerEpic actions snapshot on success response 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "editServer/INITIALIZED",
    "values": Object {
      "name": "name",
      "port": 3000,
    },
  },
  Object {
    "id": "some id",
    "params": Object {
      "id": "some id",
      "name": "name",
      "port": 3000,
    },
    "type": "server/UPDATE",
  },
]
`;
